--- a/.gitignore
+++ b/.gitignore
@@ -20,5 +20,8 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-/.storybook
-/.vscode
+#/.storybook
+#/.vscode
+
+/storybook_temp
+/vscode_temp
