--- a/package.json
+++ b/package.json
@@ -4,36 +4,29 @@
   "private": true,
   "homepage": "https://kobi1021.github.io",
   "dependencies": {
-    "connected-react-router": "^4.3.0",
+    "bulma": "^0.7.1",
+    "bulma-extensions": "^2.2.1",
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
-    "flow-bin": "^0.77.0",
-    "history": "^4.7.2",
     "node-sass-chokidar": "^1.3.3",
     "npm-run-all": "^4.1.3",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
-    "react-redux": "^5.0.7",
-    "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.4",
-    "react-test-renderer": "^16.4.1",
-    "redux": "^3.7.2",
-    "redux-thunk": "^2.3.0",
-    "typed.js": "^2.0.8",
+    "three": "^0.95.0",
     "webfontloader": "^1.6.28"
   },
   "scripts": {
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build && cp -a build/. .",
-    "build-css": "node-sass-chokidar src/ -o src/",
-    "watch-css": "npm run build-css && node-sass-chokidar src/ -o src/ --watch --recursive",
+    "build-css": "node-sass-chokidar --include-path ./src --include-path ./node_modules src/ -o src/",
+    "watch-css": "npm run build-css && node-sass-chokidar --include-path ./src --include-path ./node_modules src/ -o src/ --watch --recursive",
     "start-js": "react-scripts start",
     "start": "npm-run-all -p watch-css start-js",
     "build-js": "react-scripts build",
     "build": "npm-run-all build-css build-js",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
-    "flow": "flow",
     "lint": "eslint src",
     "storybook": "start-storybook -p 9009 -s public",
     "build-storybook": "build-storybook -s public"
