--- a/.travis.yml
+++ b/.travis.yml
@@ -1,19 +1,6 @@
 language: node_js
-os: linux
-sudo: required
-dist: trusty
-addons:
-  apt:
-    packages:
-    - mesa-utils
-    - xvfb
-    - libgl1-mesa-dri
-    - libglapi-mesa
-    - libosmesa6
 node_js:
-  - '6'
-before_script:
-  - export DISPLAY=:99.0; sh -e /etc/init.d/xvfb start
+ - "node"
 after_success:
  - git config --global user.name "kobi1021"
  - git config --global user.email "[email protected]"
