--- a/package.json
+++ b/package.json
@@ -5,15 +5,15 @@
   "homepage": "https://kobi1021.github.io",
   "dependencies": {
     "bulma": "^0.7.1",
-    "bulma-extensions": "^2.2.1",
-    "enzyme": "^3.3.0",
-    "enzyme-adapter-react-16": "^1.1.1",
-    "node-sass-chokidar": "^1.3.3",
+    "bulma-extensions": "^2.2.2",
+    "enzyme": "^3.7.0",
+    "enzyme-adapter-react-16": "^1.6.0",
+    "node-sass-chokidar": "^1.3.4",
     "npm-run-all": "^4.1.3",
-    "react": "^16.4.1",
-    "react-dom": "^16.4.1",
-    "react-scripts": "1.1.4",
-    "three": "^0.95.0",
+    "react": "^16.5.2",
+    "react-dom": "^16.5.2",
+    "react-scripts": "2.0.4",
+    "three": "^0.97.0",
     "webfontloader": "^1.6.28"
   },
   "scripts": {
@@ -32,15 +32,21 @@
     "build-storybook": "build-storybook -s public"
   },
   "devDependencies": {
-    "gh-pages": "^1.2.0",
-    "@storybook/react": "^3.4.8",
-    "@storybook/addon-actions": "^3.4.8",
-    "@storybook/addon-links": "^3.4.8",
-    "@storybook/addons": "^3.4.8",
+    "@storybook/addon-actions": "^3.4.11",
+    "@storybook/addon-links": "^3.4.11",
+    "@storybook/addons": "^3.4.11",
+    "@storybook/react": "^3.4.11",
     "babel-core": "^6.26.3",
-    "babel-runtime": "^6.26.0"
+    "babel-runtime": "^6.26.0",
+    "gh-pages": "^1.2.0"
   },
   "peerDependencies": {
     "ajv": "^6.0.0"
-  }
+  },
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ]
 }
