--- a/.travis.yml
+++ b/.travis.yml
@@ -7,3 +7,4 @@ after_success:
  - git remote rm origin
  - git remote add origin https://kobi1021:${GH_TOKEN}@github.com/kobi1021/kobi1021.github.io.git
  - npm run deploy
+ script: 'true'
