--- a/package.json
+++ b/package.json
@@ -4,15 +4,17 @@
   "private": true,
   "homepage": "https://kobi1021.github.io",
   "dependencies": {
-    "bulma": "^0.7.1",
+    "bulma": "^0.7.2",
     "bulma-extensions": "^3.0.0",
     "enzyme": "^3.7.0",
     "enzyme-adapter-react-16": "^1.6.0",
+    "jest-dom": "^2.1.0",
     "node-sass-chokidar": "^1.3.4",
     "npm-run-all": "^4.1.3",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
-    "react-scripts": "2.0.4",
+    "react-scripts": "2.0.5",
+    "react-testing-library": "^5.2.0",
     "three": "^0.97.0",
     "webfontloader": "^1.6.28"
   },
@@ -25,7 +27,7 @@
     "start": "npm-run-all -p watch-css start-js",
     "build-js": "react-scripts build",
     "build": "npm-run-all build-css build-js",
-    "test": "react-scripts test --env=jsdom",
+    "test": "react-scripts test",
     "eject": "react-scripts eject",
     "lint": "eslint src",
     "storybook": "start-storybook -p 9009 -s public",
@@ -36,8 +38,8 @@
     "@storybook/addon-links": "^3.4.11",
     "@storybook/addons": "^3.4.11",
     "@storybook/react": "^3.4.11",
-    "babel-core": "^6.26.3",
-    "babel-runtime": "^6.26.0",
+    "@babel/core": "^7.1.0",
+    "@babel/runtime": "^7.1.0",
     "gh-pages": "^2.0.1"
   },
   "peerDependencies": {
